--- a/src/_includes/_foot.html
+++ b/src/_includes/_foot.html
@@ -18,13 +18,12 @@
                         4303 Diamond Head Road<br />
                         Honolulu, HI 96813</address>
                 </div>
-                <div class="nma-widget">
+                <div class="nma-widget nma-contactinfo">
                     <h2>Contact Info</h2>
                     <h3>Steve Harris</h3>
                     <h4>NMA Counselor</h4>
-                    <p>
-                        Telephone: (808) 734-9510<br />
-                        Email: snharris [at] hawaii.edu
+                    <p><a href="tel:(808) 734-9510">(808) 734-9510</a><br />
+                        snharris [at] hawaii.edu
                     </p>
                     <a href="#" class="nma-button">Contact Steve</a>
                 </div>
