--- a/src/_includes/_head.html
+++ b/src/_includes/_head.html
@@ -23,7 +23,7 @@
             <a href="https://www.kapiolani.hawaii.edu/">KCC</a>
         </span>
         <span class="nmalogo">
-            <a href="{{ relBase }}index.html">NMA</a>
+            <a href="{{ relBase }}index.html">New Media Arts</a>
         </span>
     </h1>
     {% include _site-navigation.html %}
