--- a/src/css/style.css
+++ b/src/css/style.css
@@ -6,7 +6,7 @@
     --color-bg-body: white;
     --color-link: #006699;
     --color-link-dark: #003366;
-    --color-accent: #ff9966;
+    --color-accent: #f15b10;
     --color-text-body: rgba(0,0,0,.8);
     --color-text-body-light: rgba(0,0,0,.5);
     --color-text-body-dark: rgba(0,0,0,1);
@@ -27,6 +27,7 @@ a {
   text-decoration: none;
   color: var(--color-link);
 }
+
 
 /* SITE HEADER  */
 .site-header {
@@ -105,14 +106,15 @@ a {
 
 .site-footer .site-navigation ul {
   display: block;
-  list-style: disc;
-  margin-left: 1.375em;
+  /* list-style: disc; */
+  /* margin-left: 1.375em; */
+  margin: .5em 0 0 0;
 }
 .site-footer .site-navigation ul ul {
   position: static;
   height: auto;
   overflow: visible;
-  margin-left: 1em;
+  margin: 0 0 0 1em;
 }
 .site-footer .site-navigation ul li:hover ul{
   background-color: transparent;
@@ -120,6 +122,7 @@ a {
 .site-footer .site-navigation a {
   display: block;
   padding: .25em 0;
+  margin: 0;
 }
 .site-footer .site-navigation .nma-button {
   background-color: transparent;
@@ -127,13 +130,39 @@ a {
   color: var(--color-link);
 }
 .site-footer h2 {
-  font-size: 1.2em;
+  font-size: 1.3em;
 }
 .site-footer h3 {
   font-size: 1.1em;
 }
 .site-footer h4 {
+  font-family: var(--font-family-condensed);
   font-size: 1em;
+}
+
+.site-footer address {
+  margin-top: .5em;
+}
+
+.site-footer .nma-contactinfo h3 {
+}
+
+.site-footer .nma-contactinfo h3,
+.site-footer .nma-contactinfo h4 {
+  display: inline-block;
+  font-size: 1.1em;
+  margin-top: .5em;
+}
+.site-footer .nma-contactinfo h4 {
+  font-weight: 400;
+  font-style: italic;
+}
+.site-footer .nma-contactinfo h4 + p {
+  margin-top: .5em;
+}
+.site-footer .nma-contactinfo p a {
+  display: inline-block;
+  margin-bottom: .5em;
 }
 
 /* SITE MAIN  */
@@ -151,7 +180,7 @@ section + section {
 
 /* CONTAINER */
 .nma-container {
-  max-width: 800px;
+  max-width: 1200px;
   margin: 0 auto;
   /* background-color: pink; */
 }
