--- a/src/_includes/_foot.html
+++ b/src/_includes/_foot.html
@@ -5,7 +5,7 @@
         <div class="nma-row one-third">
             <div class="nma-column">
                 <div class="nma-widget">
-                    <img loading="lazy" width="500" height="160" src="{{ relBase }}img/nma-logo-color.png" alt="New Media Arts Logo" />
+                    <img loading="lazy" width="500" height="160" src="{{ relPathPrefix }}img/nma-logo-color.png" alt="New Media Arts Logo" />
                     <h2>About KCC New Media Arts</h2>
                     <p>The New Media Arts (NMA) program is a two year AS degree program at Kapi‘olani Community College (KapCC) in Honolulu, Hawaii. Our mission is to prepare students for employment in the fields of interface design and animation.</p>
                     <a href="#" class="nma-button">Apply Now</a>
@@ -47,7 +47,7 @@
 
 
 <!-- MAIN JS FILE -->
-<script src="{{ relBase }}js/script.js"></script>
+<script src="{{ relPathPrefix }}js/script.js"></script>
 
 </body>
 
