Updated 16 files. Removed initial NMA v3.5 content.

--- a/src/_includes/_foot.html
+++ b/src/_includes/_foot.html
@@ -6,26 +6,26 @@
             <div class="nma-column">
                 <div class="nma-widget">
                     <img loading="lazy" width="500" height="160" src="{{ relPathPrefix }}img/nma-logo-color.png" alt="New Media Arts Logo" />
-                    <h2>About KCC New Media Arts</h2>
-                    <p>The New Media Arts (NMA) program is a two year AS degree program at Kapi‘olani Community College (KapCC) in Honolulu, Hawaii. Our mission is to prepare students for employment in the fields of interface design and animation.</p>
-                    <a href="#" class="nma-button">Apply Now</a>
+                    <h2>About this 11ty Starter</h2>
+                    <p>Lorem ipsum.</p>
+                    <a href="#" class="nma-button">This is a Button</a>
                 </div>
             </div>
             <div class="nma-column">
                 <div class="nma-widget">
                     <h2>Location</h2>
-                    <address>Kapi‘olani Community College<br />
-                        4303 Diamond Head Road<br />
-                        Honolulu, HI 96813</address>
+                    <address>Location Name<br />
+                        Name of the Road<br />
+                        City, ST 12345</address>
                 </div>
                 <div class="nma-widget nma-contactinfo">
                     <h2>Contact Info</h2>
-                    <h3>Steve Harris</h3>
-                    <h4>NMA Counselor</h4>
-                    <p><a href="tel:(808) 734-9510">(808) 734-9510</a><br />
-                        snharris [at] hawaii.edu
+                    <h3>First Last</h3>
+                    <h4>Title</h4>
+                    <p><a href="tel:(808) 734-9510">(###) ###-####</a><br />
+                        name [at] email.address
                     </p>
-                    <a href="#" class="nma-button">Contact Steve</a>
+                    <a href="#" class="nma-button">Contact Us</a>
                 </div>
             </div>
             <div class="nma-column">
@@ -33,11 +33,11 @@
                     <h2>Related Links</h2>
                     <nav class="site-navigation">
                         <ul>
-                            <li><a href="https://www.hawaii.edu/">University of Hawaii</a></li>
-                            <li><a href="https://www.kapiolani.hawaii.edu/">Kapi‘olani Community College</a></li>
+                            <li><a href="#">Footer Link #1</a></li>
+                            <li><a href="#">Footer Link #1</a></li>
                         </ul>
                     </nav>
-                    <h2>NMA Program Pages</h2>
+                    <h2>Site map:</h2>
                     {% include _site-navigation.html %}
                 </div>
             </div>    
