--- a/src/_includes/_site-navigation.html
+++ b/src/_includes/_site-navigation.html
@@ -3,7 +3,7 @@
             <li><a href="{{ relPathPrefix }}index.html">Home</a></li>
             <li><a href="{{ relPathPrefix }}about/index.html">About</a>
                 <ul>
-                    <li><a href="{{ relPathPrefix }}about/nma-faculty/index.html">Sub Sub Page</a></li>
+                    <li><a href="{{ relPathPrefix }}about/nma-faculty/index.html">NMA Faculty</a></li>
                 </ul>
             </li>
             <li><a href="{{ relPathPrefix }}styleguide/index.html" class="nma-button">Style Guide</a></li>
